syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.yggdrash.proto";

service PingPong {
    rpc play (Ping) returns (Pong) {
    }
}

message Ping {
    string ping = 1;
    PeerInfo peer = 2;
}

message Pong {
    string pong = 1;
}

message PeerInfo {
    string pubKey = 2;
    string ip = 3;
    int32 port = 4;
}